Mon Dec 5 18:10:24 2013 EDT 2013 (morgan)
------------------------------------
 * bb#9595 fix for sigs targeted for ascii files containing offsets of the form EOF-n.

Mon Dec 2 15:55:24 2013 EDT 2013 (morgan)
------------------------------------
 * bb#9491 Support wildcard alternate strings of identical length in Aho-Corasick pattern matcher.

Fri Nov 8 17:08:09 2013 EDT 2013 (morgan)
------------------------------------
 * Add ForceToDisk option for clamd and force-to-disk arg for clamscan

Wed Oct 31 12:48:00 2013 EDT 2013 (morgan)
------------------------------------
 * libclamav: bb#5341 - Change floating point byte order check from compile time to run time.

Thu Oct 23 18:01:46 2013 EDT 2013 (dar)
------------------------------------
 * bb #9222: make fmap_unneed respect nested maps

Wed Oct 23 16:21:46 2013 EDT 2013 (morgan)
------------------------------------
 * libclamav: bb#5978 - Allow html detection/normalization for graphic file types.

Thu Oct 17 16:50:00 2013 EDT 2013 (morgan)
------------------------------------
 * libclamav: bb#6348 - Add file type recognition for Office Open XML.

Tue Oct 15 16:03:25 2013 EDT 2013 (dar)
------------------------------------
 * libclamav: bb #9154 - ELF handling re-write

Tue Oct 15 16:00:14 2013 EDT 2013 (dar)
------------------------------------
 * libclamav: bb #8696 - Bug reported by NIW Solutions

Mon Oct 14 17:07:40 2013 EDT 2013 (morgan)
------------------------------------
 * bb #8209 - move perror()'s so they will work. Patches supplied by Bill Parker.

Fri Oct 11 16:50:34 2013 EDT 2013 (dar)
------------------------------------
 * bb #9072: clamscan message separator fix

Tue Oct 8 17:17:44 EDT 2013 (morgan)
------------------------------------
 * libclamav: Add support for XZ file type recognition and decompression.

Thu Oct 3 10:49:11 2013 EDT 2013 (dar)
------------------------------------
 * bb #1570: Support ADC compression in DMG

Wed Oct 2 11:22:40 2013 EDT 2013 (dar)